# Localization-Archive

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/: seeds.yaml
data/curation/: 247-place-recognition-2015.yaml  README.md  a2-gnn-2025.yaml  aachen-day-night-2018.yaml  ace-2023.yaml  ace0-2024.yaml  air-hloc-2025.yaml  apr-limitations-2019.yaml  aslfeat-2020.yaml  aspanformer-2022.yaml  atloc-2020.yaml  benchmarking-image-retrieval-2020.yaml  contextdesc-2019.yaml  coordinate-permutation-2023.yaml  cosplace-2022.yaml  cotr-2021.yaml  cross-descriptor-vlm-2021.yaml  d2net-2019.yaml  dcl-2026.yaml  delf-2017.yaml  deviloc-2024.yaml  dgc-gnn-2024.yaml  disk-2020.yaml  dkm-2023.yaml  dsac-2017.yaml  dsac-star-2021.yaml  dust3r-2024.yaml  efficient-loftr-2024.yaml  fine-tuning-cnn-retrieval-2019.yaml  geometric-posenet-2017.yaml  glace-2024.yaml  gluestick-2023.yaml  gsff-privacy-preserving-visual-localization-2025.yaml  hf-net-2019.yaml  hscnet-2020.yaml  hscnet-plus-plus-2024.yaml  hyperpose-2025.yaml  image-based-localization-lstms-2017.yaml  inloc-2018.yaml  invsfm-2019.yaml  (+54 more)
data/reference/: citation_provider_cache.json  core_conferences.csv  sjr_journals.csv
docs/: awesome_visual_localization_import.md  curation-guide.md  data-collection-report.md  work-spec-and-feedback.md
pipeline/: apply_citation_audit.py  audit_citations.py  build_graph.py  fetch_seed_candidates.py  suggest_citations.py  validate_data.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: graph.json
(+25 files in other folders)
